--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>My test page</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
-    <script charset="gbk" src = "scripts/main.js" defer> </script>
+    <script  src = "scripts/main.js" defer> </script>
 </head>
 
 <body>
